--- a/clashN/clashN/Views/HelpView.xaml
+++ b/clashN/clashN/Views/HelpView.xaml
@@ -22,11 +22,10 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto">
             <WrapPanel>
                 <materialDesign:Card
-                    Width="240"
+                    Width="245"
                     Margin="8"
-                    Padding="16"
                     materialDesign:UniformCornerRadius="8">
-                    <Grid>
+                    <Grid VerticalAlignment="Center">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
@@ -34,30 +33,29 @@
                         </Grid.RowDefinitions>
                         <TextBlock
                             Grid.Row="0"
-                            Margin="16,16,16,4"
+                            Margin="0,16,0,4"
                             HorizontalAlignment="Center"
                             Style="{StaticResource TabItemTitle}"
                             Text="{x:Static resx:ResUI.TbHelpProject}" />
 
                         <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
 
-                        <DockPanel Grid.Row="2">
-                            <Button
-                                x:Name="btnAbout"
-                                Width="100"
-                                Click="btnAbout_Click"
-                                Content="{x:Static resx:ResUI.TbHelpProjectGo}"
-                                Style="{StaticResource DefButton}" />
-                        </DockPanel>
+                        <Button
+                            x:Name="btnAbout"
+                            Grid.Row="2"
+                            Margin="0,4,0,16"
+                            Width="100"
+                            Click="btnAbout_Click"
+                            Content="{x:Static resx:ResUI.TbHelpProjectGo}"
+                            Style="{StaticResource DefButton}" />
                     </Grid>
                 </materialDesign:Card>
 
                 <materialDesign:Card
-                    Width="240"
+                    Width="245"
                     Margin="8"
-                    Padding="16"
                     materialDesign:UniformCornerRadius="8">
-                    <Grid>
+                    <Grid VerticalAlignment="Center">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
@@ -65,29 +63,28 @@
                         </Grid.RowDefinitions>
                         <TextBlock
                             Grid.Row="0"
-                            Margin="16,16,16,4"
+                            Margin="0,16,0,4"
                             HorizontalAlignment="Center"
                             Style="{StaticResource TabItemTitle}"
                             Text="Update Frok ClashN" />
 
                         <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
 
-                        <DockPanel Grid.Row="2">
-                            <Button
-                                x:Name="btnCheckUpdateN"
-                                Width="100"
-                                Content="{x:Static resx:ResUI.TbHelpCheck}"
-                                Style="{StaticResource DefButton}" />
-                        </DockPanel>
+                        <Button
+                            x:Name="btnCheckUpdateN"
+                            Grid.Row="2"
+                            Margin="0,4,0,16"
+                            Width="100"
+                            Content="{x:Static resx:ResUI.TbHelpCheck}"
+                            Style="{StaticResource DefButton}" />
                     </Grid>
                 </materialDesign:Card>
 
                 <materialDesign:Card
-                    Width="240"
+                    Width="245"
                     Margin="8"
-                    Padding="16"
                     materialDesign:UniformCornerRadius="8">
-                    <Grid>
+                    <Grid VerticalAlignment="Center">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
@@ -95,20 +92,20 @@
                         </Grid.RowDefinitions>
                         <TextBlock
                             Grid.Row="0"
-                            Margin="16,16,16,4"
+                            Margin="0,16,0,4"
                             HorizontalAlignment="Center"
                             Style="{StaticResource TabItemTitle}"
                             Text="Update Mihomo Core" />
 
                         <Separator Grid.Row="1" Style="{StaticResource MaterialDesignLightSeparator}" />
 
-                        <DockPanel Grid.Row="2">
-                            <Button
-                                x:Name="btnCheckUpdateMihomoCore"
-                                Width="100"
-                                Content="{x:Static resx:ResUI.TbHelpCheck}"
-                                Style="{StaticResource DefButton}" />
-                        </DockPanel>
+                        <Button
+                            x:Name="btnCheckUpdateMihomoCore"
+                            Grid.Row="2"
+                            Margin="0,4,0,16"
+                            Width="100"
+                            Content="{x:Static resx:ResUI.TbHelpCheck}"
+                            Style="{StaticResource DefButton}" />
                     </Grid>
                 </materialDesign:Card>
             </WrapPanel>
